versioned_docs/version-2.23/reference/subsystems/dockerfile-parser.mdx
---
title: dockerfile-parser
description: |
  Used to parse Dockerfile build specs to infer their dependencies.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Used to parse Dockerfile build specs to infer their dependencies.

This version of Pants uses `dockerfile` version 3.2.0 by default. Use a dedicated lockfile and the `install_from_resolve` option to control this.

Backend: <span className="color--primary">`pants.backend.docker.lint.hadolint`</span>

Config section: <span className="color--primary">`[dockerfile-parser]`</span>

<span className={styles.options}>

## Basic options

### `use_rust_parser`

<Option
  cli_repr={`--[no-]dockerfile-parser-use-rust-parser`}
  env_repr='PANTS_DOCKERFILE_PARSER_USE_RUST_PARSER'
  toml_repr={`[dockerfile-parser]
use_rust_parser = <bool>`}
  default_repr={`False`}
>

Use the new experimental Rust-based, multithreaded, in-process dependency parser.

If you think the new behaviour is causing problems, it is recommended that you run `pants --dockerfile-parser-use-rust-parser=True peek :: > new-parser.json` and then `pants --dockerfile-parser-use-rust-parser=False peek :: > old-parser.json` and compare the two results.

If you think there is a bug, please file an issue: https://github.com/pantsbuild/pants/issues/new/choose.

</Option>

## Advanced options

### `install_from_resolve`

<Option
  cli_repr={`--dockerfile-parser-install-from-resolve=<str>`}
  env_repr='PANTS_DOCKERFILE_PARSER_INSTALL_FROM_RESOLVE'
  toml_repr={`[dockerfile-parser]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in `[python].resolves`, as described in https://www.pantsbuild.org/2.23/docs/python/overview/lockfiles#lockfiles-for-tools.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants, which uses `dockerfile` version 3.2.0.

If unspecified, and the `lockfile` option is set, the tool will use the custom `dockerfile-parser` &#x22;tool lockfile&#x22; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--dockerfile-parser-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCKERFILE_PARSER_INTERPRETER_CONSTRAINTS'
  toml_repr={`[dockerfile-parser]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `requirements`

<Option
  cli_repr={`--dockerfile-parser-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCKERFILE_PARSER_REQUIREMENTS'
  toml_repr={`[dockerfile-parser]
requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

If `install_from_resolve` is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of `python_requirement` targets (or targets that generate or depend on `python_requirement` targets). Make sure to use the `//` prefix to refer to targets using their full address from the root (e.g. `//3rdparty/python:tool`). This is necessary to distinguish address specs from local or VCS requirements.

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
